finished the project! it only took me about 3 days...anyway for the last commit i fixed the whitespace issues on both pages, added some css and the right colors, fonts sizes, etc and added drop shadows n whatnot. it's not perfect but i like it

--- a/resutlsstyle.css
+++ b/resutlsstyle.css
@@ -1,11 +1,14 @@
 body {
 	font-family: 'Open Sans', sans-serif;
 	height: 1000px;
-	width: 1250px;
+	width: 1275px;
 	display: inline-grid;
 	grid-template-rows: repeat(8, 1fr); 
 	grid-template-columns: repeat(8, 1fr);	
-	grid-gap: 20px;
+	column-gap: 40px;
+	grid-row-gap: 15px;
+	padding: 0px;
+	margin: 0px;
 }
 
 a {
@@ -121,16 +124,54 @@ a {
 }
 
 .resultbox{
-	border: 3px black solid;
-	display: inline-block;
 	grid-column: 2 / span 4;
-	grid-row: 3 / span 1;
+	border: 1px grey solid;
+	border-collapse: collapse;
+	box-shadow: 5px 5px 10px #e0e2e5; 
+	padding: 0px 15px 0px 15px;
+}
+.resultbox table{
+	width: 100%;
+	border: 1px white solid;
+	border-collapse: collapse;
+}
+
+.resultbox h3{
+	text-align: justify;
+	color: grey;
+}
+
+.resultbox .wheelie{
+	font-size: 15px;
+	border-bottom: 1px grey solid;
+	border-top: 1px grey solid;
+	border-collapse: collapse;
+	padding: 0px;
+	margin-left: 0px;
+}
+
+.resultbox .deelie {
+	font-size: 15px;
+	border-bottom: 1px grey solid;
+	border-top: 1px grey solid;
+	border-collapse: collapse;
+	padding: 0px;
+	margin: 0px;
+}
+
+.feedback {
+	grid-column: 2 / span 4;
+	grid-row: 4 / span 1;
+	font-size: 10px;
+	margin: 0px 0px 0px 540px;
+	color: grey;
+
 }
 
 .results2{
 	display: inline-block;
 	grid-column: 2 / span 4;
-	grid-row: 4 / span 1;
+	grid-row: 5 / span 1;
 }
 
 .results2 .twob {
@@ -139,33 +180,70 @@ a {
 
 .relatedsearch {
 	grid-column: 2 / span 4;
+}
+.relatedsearch .toptext {
 	font-weight: bold;
 }
-
-.left {
-	grid-column: 2 /span 2;
+.relatedsearch a {
 	font-size: 15px;
 }
 
-.right {
-	grid-column: 4 / span 2;
-	font-size: 15px;
-}
-.right a, .left a {
-	display: inline-block;
-	padding-bottom: 10px;
-	color: #0619b1;
+.relatedsearch .scooch{
+	padding-left: 50px;
 }
 
 .sidebar {
-	border: 3px black solid;
+	border: 1px grey solid;
 	display: block;
 	grid-column: 6 / span 4;
 	grid-row: 2 / span 2;
+	padding: 0px 15px 0px 15px;
+	box-shadow: 5px 5px 10px #e0e2e5; 
+
 }
+
+.sidebar p {
+	font-size: 15px;
+	display: inline-block;
+	margin-bottom: 0px;
+}
+
+.sidebar a {
+	font-size: 15px;
+	padding-right: 15px;
+}
+
+.sidebar #wiki{
+	display: inline-block;
+	padding: 0px;
+}
+
 .sidebar img {
-	height: 50px;
-	width: 50px;
+	height: 70px;
+	width: 70px;
+
+}
+
+.sidebar h2{
+	padding-bottom: 0px;
+	margin: 10px 0px 0px 0px;
+}
+
+.sidebar .undertext {
+	margin-bottom: 10px;
+}
+
+.sidebar .topbit {
+	border-bottom: 1px grey solid;
+}
+
+.sidebar .hungry {
+	padding-top: 10px;
+}
+
+.sidebar .shift {
+	padding-left: 50px;
+	color: grey;
 }
 
 .bottomnav{
@@ -215,12 +293,30 @@ a {
 }
 
 .footer{
-	border: 3px black solid;
+	background-color: #f7f7f7;
+	padding: 0px 15px 0px 150px;
+	font-size: 15px;
+	border-top: 1px gray solid;
 	display: inline-block;
-	background-color: gray;
 	grid-column: 1/ span 9;
+	font-weight: bold;
 }
 .footer img {
 	height: 20px;
 	width: 20px;
+}
+
+.footer p{
+	margin: 0px 0px 20px 0px;
+	color: lightgrey;
+}
+.footer a {
+	color: gray;
+}
+.footer .help{
+	margin-right: 40px;
+	
+}
+.footer .bottom{
+	margin-bottom: 15px;
 }
