--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: "Open Sans", sans-serif;
+	margin: 0px;
 }
 
 a {
@@ -113,6 +114,7 @@ a {
 	top: 200px;
 	font-size: 15px;
 	border-top: 1px gray solid;
+	padding-bottom: 10px;
 }
 .footer .ads{
 	display: inline-block;
